fix: copy message visibility on load

--- a/css/style.css
+++ b/css/style.css
@@ -177,7 +177,7 @@ li {
 }
 
 .shown {
-  opacity: 1;
+  opacity: 1 !important;
 }
 
 .shaken {
